decoupled singletons and implemented a more customizable approach